--- a/mini_data_warehouse/models/gold/fact_fund_nav_over_time/fact_fund_nav_over_time.yml
+++ b/mini_data_warehouse/models/gold/fact_fund_nav_over_time/fact_fund_nav_over_time.yml
@@ -2,26 +2,21 @@ version: 2
 
 models:
   - name: fact_fund_nav_over_time
-    description: "A fact table that captures the Net Asset Value (NAV) of funds over time, aggregated on a monthly basis."
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns: [fund_key, nav_date_key]
     columns:
-      - name: fund_id
-        description: "The unique identifier for each fund."
+      - name: fund_key
         tests:
           - not_null
-          - unique
-      - name: nav_date
-        description: "The date representing the month and year for which the NAV is recorded."
+          - relationships:
+              to: ref('dim_fund')
+              field: fund_key
+              column_name: fund_key
+      - name: nav_date_key
         tests:
           - not_null
-      - name: nav_value
-        description: "The Net Asset Value (NAV) of the fund for the specified month."
-        tests:
-          - not_null
-      - name: created_at
-        description: "Timestamp indicating when the record was created."
-        tests:
-          - not_null
-      - name: updated_at
-        description: "Timestamp indicating when the record was last updated."
-        tests:
-          - not_null
+          - relationships:
+              to: ref('dim_date')
+              field: nav_date_key
+              column_name: date_key
