--- a/mini_data_warehouse/models/gold/dim_date/dim_date.yml
+++ b/mini_data_warehouse/models/gold/dim_date/dim_date.yml
@@ -2,3 +2,11 @@ version: 2
 
 models:
   - name: dim_date
+    description: Business-aware date dimension with fiscal and business-day flags; includes '_UNKNOWN' row.
+    columns:
+      - name: date_key
+        tests: [not_null, unique]
+      - name: date_id
+        tests: [not_null, unique]
+      - name: date
+        tests: [unique]      # nullable for the '_UNKNOWN' row -> avoid not_null here
