--- a/mini_data_warehouse/models/gold/fact_company_nav_over_time_m_one/fact_company_nav_over_time_one.yml
+++ b/mini_data_warehouse/models/gold/fact_company_nav_over_time_m_one/fact_company_nav_over_time_one.yml
@@ -1,12 +1,35 @@
+version: 2
+
 models:
-  - name: fact_company_nav_over_time_m1
+  - name: fact_company_nav_over_time_m_one
+    description: Method 1 — company NAV = company valuation × fund ownership % (as-of date).
     tests:
       - dbt_utils.unique_combination_of_columns:
-          combination_of_columns: [fund_key, company_key, nav_date_key]
+          arguments:
+            combination_of_columns: [fund_key, company_key, nav_date_key]
     columns:
       - name: fund_key
-        tests: [not_null]
+        tests:
+          - not_null
+          - relationships:
+              arguments:
+                to: ref('dim_funds')
+                field: fund_key
       - name: company_key
-        tests: [not_null]
+        tests:
+          - not_null
+          - relationships:
+              arguments:
+                to: ref('dim_company')
+                field: company_key
       - name: nav_date_key
-        tests: [not_null]
+        tests:
+          - not_null
+          - relationships:
+              arguments:
+                to: ref('dim_date')
+                field: date_key
+      - name: is_current_company
+        tests:
+          - accepted_values:
+              values: [true, false]
