--- a/mini_data_warehouse/models/gold/fact_fund_nav_over_time/fact_fund_nav_over_time.yml
+++ b/mini_data_warehouse/models/gold/fact_fund_nav_over_time/fact_fund_nav_over_time.yml
@@ -2,21 +2,25 @@ version: 2
 
 models:
   - name: fact_fund_nav_over_time
+    description: Daily NAV per fund = latest valuation + cumulative flows since that valuation.
     tests:
       - dbt_utils.unique_combination_of_columns:
-          combination_of_columns: [fund_key, nav_date_key]
+          arguments:
+            combination_of_columns: [fund_key, nav_date_key]
+
     columns:
       - name: fund_key
         tests:
           - not_null
           - relationships:
-              to: ref('dim_fund')
-              field: fund_key
-              column_name: fund_key
+              arguments:
+                to: ref('dim_funds') 
+                field: fund_key
+
       - name: nav_date_key
         tests:
           - not_null
           - relationships:
-              to: ref('dim_date')
-              field: nav_date_key
-              column_name: date_key
+              arguments:
+                to: ref('dim_date')
+                field: date_key
