--- a/mini_data_warehouse/seeds/company_data.yml
+++ b/mini_data_warehouse/seeds/company_data.yml
@@ -2,26 +2,30 @@ version: 2
 
 seeds:
   - name: company_data
-    description: Raw company valuation extract.
     columns:
-      - name: company_id
-        tests: [not_null]
+      - name: transaction_date
+        tests:
+          - dbt_utils.expression_is_true:
+              arguments:
+                expression: "to_date(transaction_date, 'DD/MM/YYYY') is not null"
+              config:
+                severity: warn
 
       - name: company_name
-        tests: [not_null]
+        tests:
+          - not_null:
+              config:
+                severity: warn
 
       - name: transaction_type
         tests:
           - accepted_values:
               values: ['Valuation']  # relax if other types exist
-
-      - name: transaction_date
-        tests:
-          - not_null
-          - dbt_utils.expression_is_true:
-              arguments:
-                expression: "try_to_date(transaction_date, 'DD/MM/YYYY') is not null"
+              config:
+                severity: warn
 
       - name: transaction_amount
         tests:
-          - not_null
+          - not_null:
+              config:
+                severity: warn
