--- a/mini_data_warehouse/models/gold/dim_company/dim_company.yml
+++ b/mini_data_warehouse/models/gold/dim_company/dim_company.yml
@@ -6,6 +6,18 @@ models:
     
     columns:
       - name: company_key
-        tests: [not_null, unique]
+        tests:
+          - not_null:
+              config:
+                severity: warn
+          - unique:
+              config:
+                severity: warn
       - name: company_id
-        tests: [not_null, unique]
+        tests:
+          - not_null:
+              config:
+                severity: warn
+          - unique:
+              config:
+                severity: warn
