--- a/mini_data_warehouse/models/gold/fact_company_nav_over_time_m_two/fact_company_nav_over_time_m_two.yml
+++ b/mini_data_warehouse/models/gold/fact_company_nav_over_time_m_two/fact_company_nav_over_time_m_two.yml
@@ -8,32 +8,45 @@ models:
           arguments:
             combination_of_columns: [fund_key, company_key, nav_date_key]
             where: "fund_key is not null and nav_date_key is not null and company_key is not null"
+          config:
+            severity: warn
     columns:
       - name: fund_key
         tests:
           - not_null:
-              severity: warn 
+              config:
+                severity: warn
           - relationships:
               arguments:
                 to: ref('dim_funds')
                 field: fund_key
+              config:
+                severity: warn
       - name: company_key
         tests:
           - not_null:
-              severity: warn 
+              config:
+                severity: warn
           - relationships:
               arguments:
                 to: ref('dim_company')
                 field: company_key
+              config:
+                severity: warn
       - name: nav_date_key
         tests:
           - not_null:
-              severity: warn 
+              config:
+                severity: warn
           - relationships:
               arguments:
                 to: ref('dim_date')
                 field: date_key
+              config:
+                severity: warn
       - name: is_current_company
         tests:
           - accepted_values:
               values: [true, false]
+              config:
+                severity: warn
