--- a/mini_data_warehouse/models/gold/fact_fund_nav_over_time/fact_fund_nav_over_time.yml
+++ b/mini_data_warehouse/models/gold/fact_fund_nav_over_time/fact_fund_nav_over_time.yml
@@ -8,22 +8,30 @@ models:
           arguments:
             combination_of_columns: [fund_key, nav_date_key]
             where: "fund_key is not null and nav_date_key is not null"
+          config:
+            severity: warn
 
     columns:
       - name: fund_key
         tests:
           - not_null:
-              severity: warn 
+              config:
+                severity: warn
           - relationships:
               arguments:
                 to: ref('dim_funds') 
                 field: fund_key
+              config:
+                severity: warn
 
       - name: nav_date_key
         tests:
           - not_null:
-              severity: warn 
+              config:
+                severity: warn
           - relationships:
               arguments:
                 to: ref('dim_date')
                 field: date_key
+              config:
+                severity: warn
